--- a/product.html
+++ b/product.html
@@ -17,12 +17,13 @@
 <body>
     <div id="header">
         <div class="container">
-           <div class="wrapper">
-              <div class="menu flex">
-                  <a href="index.html" class="link">Home</a>
-                  <a href="#About" class="link">About</a>
-                  <a href="Contact-us.html" class="link">Contact us</a>                  
-              </div>
+            <div class="wrapper">
+                <div class="menu flex">
+                    <a href="index.html" class="link">Home</a>
+                    <a href="#About" class="link">About</a>
+                    <a href="Contact-us.html" class="link">Contact us</a>
+                    <a href="Cart.html" class="link">Cart</a>               
+                </div>
             </div>
         </div>
     </div>
@@ -39,7 +40,7 @@
                 <form name="addToCart">
                     <div class="form-group">
                         <label for="n">Amount</label>
-                        <input type="number" class="form-control" id="n" placeholder="1">
+                        <input type="number" class="form-control" id="n" placeholder="0">
                     </div>
                     <button type="submit" class="btn btn-secondary btn-lg btn-block">
                         Add to Cart
