--- a/Contact-us.html
+++ b/Contact-us.html
@@ -16,12 +16,13 @@
 <body>
     <div id="header">
         <div class="container">
-           <div class="wrapper">
-              <div class="menu flex">
-                  <a href="index.html" class="link">Home</a>
-                  <a href="#About" class="link">About</a>
-                  <a href="" class="link active">Contact us</a>                  
-              </div>
+            <div class="wrapper">
+                <div class="menu flex">
+                    <a href="index.html" class="link">Home</a>
+                    <a href="#About" class="link">About</a>
+                    <a href="" class="link active">Contact us</a>                  
+                    <a href="Cart.html" class="link">Cart</a>
+                </div>
             </div>
         </div>
     </div>
