--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <div id="header">
         <div class="container">
-           <div class="wrapper">
-              <div class="menu flex">
-                  <a href="" class="link active">Home</a>
-                  <a href="#About" class="link">About</a>
-                  <a href="Contact-us.html" class="link">Contact us</a>                  
-              </div>
+            <div class="wrapper">
+                <div class="menu flex">
+                    <a href="index.html" class="link active">Home</a>
+                    <a href="#About" class="link">About</a>
+                    <a href="Contact-us.html" class="link">Contact us</a>                  
+                    <a href="Cart.html" class="link">Cart</a>
+                </div>
             </div>
         </div>
     </div>
