--- a/Cart.html
+++ b/Cart.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
 </head>
-<body>
+<body onclick="focusElement()">
     <div id="header">
         <div class="container">
             <div class="wrapper">
@@ -26,21 +26,28 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container my-5">
         <h2>Cart <i class="fa fa-shopping-cart" aria-hidden="true"></i> </h2>
 
         <p id="note">Please notice that your cart will be clear once you close your browser</p>
-        <table id="table" class="table table-hover">
+        <table id="table" class="table table-hover my-5">
             <thead>
                 <tr>
                     <th scope="col">Product</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Total</th>
+                    <th scope="col" class="table-col">Price</th>
+                    <th scope="col" class="table-col">Quantity</th>
+                    <th scope="col" class="table-col">Total</th>
                 </tr>
             </thead>
             <tbody id='tableBody'>
             </tbody>
+            <tfoot class="text-center">
+                <tr>
+                    <th id="total" colspan="2"></th>
+                    <th class="border-left border-bottom">Total</th>
+                    <td class="border-right border-bottom border-left font-weight-bold">200</td>
+                </tr>
+            </tfoot>
         </table>
     </div>
     
